# zorton_reverse

./: .gitignore  README.md  Zorton_brothes_v1.01.json  zorton_frames_data.json
codegamers-zorton-brothers/: config.json
test_python/: README.md  analisischunks.txt  parser.py  parser_v2.py  zorton_structs.h
visualizer/: README.md  config.json  main.py  pyproject.toml
visualizer/zb_analyzer/: frame_buttons.py  graph_processor.py  hitbox_manager.py  scene_loader.py
