[project]
name = "codegamers-zorton-brothers"
version = "2.0.0"
authors = [{ name = "havi"}, {name = "Liso"}]
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyside6>=6.10.0",
    "networkx>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]